Working version with updated pyO3

--- a/play.ipynb
+++ b/play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        " 'distance_functions']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,11 +42,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from distance_functions import compute_levenshtein_distance, compute_euclidean_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_euclidean_distance([1, 7], [1, 2])"
    ]
   },
   {
@@ -66,7 +86,7 @@
     }
    ],
    "source": [
-    "compute_euclidean_distance([1, 7], [1, 2])"
+    "compute_euclidean_distance([1, 2], [1, 7])"
    ]
   },
   {
@@ -77,30 +97,10 @@
     {
      "data": {
       "text/plain": [
-       "5.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_euclidean_distance([1, 2], [1, 7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "[1]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,18 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 0, 0]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "argument 'left': Can't extract `str` to `Vec`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m compute_levenshtein_distance(\u001b[39m'\u001b[39;49m\u001b[39mcat\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mhat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: argument 'left': Can't extract `str` to `Vec`"
+     ]
     }
    ],
    "source": [
@@ -131,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from time import time\n",
-    "def timeit (func):``\n",
+    "def timeit (func):\n",
     "    def wrapper(*args, **kwargs):\n",
     "        start = time()\n",
     "        result = func(*args, **kwargs)\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,31 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Function took 6.257772445678711 milliseconds\n",
+      "Function took 4171.8549728393555 milliseconds\n",
       "1 milliseconds is 1/1000 of a second\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "130"
+       "130000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from test import left, right\n",
-    "sum(ld(left*5, right*5))"
+    "sum(ld(left*5000, right*5000))"
    ]
   },
   {
@@ -251,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
